# freelance-crm

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  start.sh  supervisord.conf
.github/workflows/: sync_to_hf.yml  tests.yml
bot/: bot.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_alter_client_phone.py  0003_alter_client_phone.py  0004_client_telegram_chat_id.py  0005_alter_client_telegram_chat_id.py
clients/tests/: test_clients_forms.py  test_clients_models.py  test_clients_views.py  test_forms.py  test_views.py
crm/: celery_app.py  settings.py  urls.py  views.py
crm/tests/: test_crm_dashboard.py  test_crm_settings.py  test_crm_urls.py  test_urls.py
docs/: tasks.md  telegram_bot.md
docs/clients/: clients.md  testing_clients.md
docs/crm/: crm.md  testing_crm.md
docs/invoices/: invoices.md  testing_invoices.md
docs/projects/: projects.md  testing_projects.md
docs/tasks/: tasks.md  testing_tasks.md
invoices/: admin.py  forms.py  models.py  urls.py  views.py
invoices/migrations/: 0001_initial.py  0002_alter_invoice_options_invoice_created_at_and_more.py  0003_remove_invoice_pdf_file_invoice_updated_at_and_more.py
invoices/tests/: test_invoices_forms.py  test_invoices_models.py  test_invoices_view.py
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  (+1 more)
tasks/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
templates/: base.html  dashboard.html
(+24 files in other folders)
